<resources>
    <string name="app_name">Wood Orders Taker</string>
    <string name="companyName">Deeb For Wood Trading</string>
    <string name="companyAddress">Industrial Zone</string>
    <string name="materialProductButtonText">Wood Products List</string>
    <string name="showInvoicesButtonText">View Invoices</string>
    <string name="exitProgramButtonText">Exit</string>
    <string name="backToPreviousProperty">Back</string>
    <string name="buttonPlaceHolder">Button</string>
    <string name="propertyPlaceHolder">Choose a Product</string>
    <string name="addToInvoice">Add to the Invoice</string>
    <string name="backToPreviousPage">Back</string>
    <string name="cancelInvoiceText">Cancel Invoice</string>
    <string name="totalNumberText">Total Number</string>
    <string name="totalNumberShortText">Number</string>
    <string name="m3Unit">m3</string>
    <string name="totalVolumeText">Total Volume</string>
    <string name="totalVolumeShortText">Volume</string>
    <string name="unitPriceText">Unit Price</string>
    <string name="currencyUnitText">\$</string>
    <string name="totalPriceText">Total Price</string>
    <string name="doublePlaceholder">0.0</string>
    <string name="reviewInvoice">Show Invoice</string>
    <string name="printInvoice">Print Invoice</string>
    <string name="doneText">DONE!!!</string>
    <string name="customerName">Customer</string>
    <string name="discount">Discount</string>
    <string name="customerNameHint">e.g. Maher Deeb</string>
    <string name="soldTextHint">e.g. 5</string>
    <string name="InvoiceValue">Invoice Value</string>
    <string name="invoiceValueExample">350000</string>
    <string name="confirmPayment">Confirm Payment</string>
    <string name="payment">Pay</string>
    <string name="addNewProduct">Add a new product</string>
    <string name="totalNumberHint">e.g. 15</string>
    <string name="messageConfirmPayment">Payment confirmed</string>
    <string name="messageConfirmPrinting">The invoice was sent to the printer successfully</string>
    <string name="externalServerUrl">http://xx.xxx.xx.xx:5000/data_api</string>
    <string name="internalServerUrl">http://10.0.2.2:5000/data_api</string>
    <string name="messageConfirmSentToServer">The invoice was sent to the server successfully</string>
    <string name="messageErrorSendToServer">Failed to send the invoice to the server</string>
    <string name="finishTheAppTitle">Exit App</string>
    <string name="messageDoYouWantToFinishTheApp">Do you want to exit the App?</string>
    <string name="yesAnswer">Yes</string>
    <string name="noAnswer">No</string>
    <string name="invoiceNumberPlaceHolder">Invoice Nr.</string>
    <string name="dataPlaceholder">27.05.2020</string>
    <string name="chooseWord">Select</string>
    <string name="spaceSeparator">\t </string>
    <string name="cancelInvoiceMessageTitle">Cancel Invoice</string>
    <string name="doYouWantToCancelInvoiceMessage">Do you want to cancel this invoice?</string>
    <string name="theChosenPlaceHolder">Choose</string>
    <string name="cm">cm</string>
    <string name="mm">mm</string>
    <string name="m">m</string>
    <string name="errorMessageNoAmountAndUnitPrice">Please enter the amount and the unit price</string>
    <string name="backToMainScreen">Go back to the main screen</string>
    <string name="InvoicesFromText">Invoices from</string>
    <string name="showInvoicesButton">Show Invoices</string>
    <string name="invoicesToDateText">Invoices until</string>
    <string name="sendInvoicesToServerText">Send invoices to the server</string>
    <string name="noteTextLabelText">Notes</string>
    <string name="noteExample">e.g. paid </string>
    <string name="netInvoiceValue">Net Sum</string>
    <string name="invoicesSum">Sum</string>
    <string name="sendDataToServerText">Send</string>
    <string name="enterTextButton">Enter</string>
    <string name="idText">Nr.</string>
    <string name="propertiesLabelText">Description</string>
    <string name="deleteProductMessageTitle">Delete Product</string>
    <string name="messageDoYouWantToDeleteTheProduct">Do you want to delete this product</string>
    <string name="notGivenText"> . </string>
    <string name="thicknessText">Thickness</string>
    <string name="lengthText">Length</string>
    <string name="widthText">Width</string>
    <string name="missingCustomerNameMessageError">Please enter the customer\'s Name</string>
    <string name="serverPassword">xxxxxxxxxxx</string>
    <string name="Products">Products"</string>
</resources>
