<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/mainUiStyle"
    tools:context=".QuantityAndPrice">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="392dp"
        android:layout_height="209dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973">

        <Button
            android:id="@+id/addToInvoiceButton"
            style="@style/myButton"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:width="300dp"
            android:text="@string/addToInvoice"
            android:textSize="@dimen/normalTextSize" />

        <Button
            android:id="@+id/backButton"
            style="@style/myButton"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:width="300dp"
            android:text="@string/backToPreviousPage"
            android:textSize="@dimen/normalTextSize" />

        <Button
            android:id="@+id/cancelInvoiceButton"
            style="@style/myButton"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:width="300dp"
            android:text="@string/cancelInvoiceText"
            android:textSize="@dimen/normalTextSize" />
    </LinearLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="255dp"
        android:shrinkColumns="1"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="left">

            <TextView
                android:id="@+id/totalAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalNumberText"
                android:textSize="@dimen/normalTextSize"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/totalAmountInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/totalNumberHint"
                android:inputType="number"
                android:textSize="@dimen/normalTextSize"
                android:layout_weight="2"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="left">

            <TextView
                android:id="@+id/totalVolumeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalVolumeText"
                android:textSize="@dimen/normalTextSize"
                android:layout_column="0"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/totalVolumeoutput"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/doublePlaceholder"
                android:textSize="@dimen/normalTextSize"
                android:layout_column="1"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/m3Unit"
                android:textSize="@dimen/normalTextSize"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginTop="8dp"
            android:gravity="left">

            <TextView
                android:id="@+id/unitPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unitPriceText"
                android:textSize="@dimen/normalTextSize"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/unitPriceInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/soldTextHint"
                android:inputType="numberDecimal"
                android:textSize="@dimen/normalTextSize"
                android:layout_weight="2"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="left">

            <TextView
                android:id="@+id/totalPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalPriceText"
                android:textSize="@dimen/normalTextSize"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/totalPriceOutput"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/doublePlaceholder"
                android:textSize="@dimen/normalTextSize"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/priceUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencyUnitText"
                android:textSize="@dimen/normalTextSize"
                android:layout_weight="1"/>

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>