<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/mainUiStyle"
    app:layout_constrainedWidth="false"
    tools:context=".AddCustomerName"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92">

        <Button
            android:id="@+id/confirmPayment"
            style="@style/myButton"
            android:layout_marginTop="5dp"
            android:width="250dp"
            android:text="@string/confirmPayment"
            android:textSize="@dimen/normalTextSize" />

        <Button
            android:id="@+id/backButton"
            style="@style/myButton"
            android:layout_marginTop="5dp"
            android:width="250dp"
            android:text="@string/backToPreviousPage"
            android:textSize="@dimen/normalTextSize" />

        <Button
            android:id="@+id/cancelInvoiceButton"
            style="@style/myButton"
            android:layout_marginTop="5dp"
            android:width="250dp"
            android:text="@string/cancelInvoiceText"
            android:textSize="@dimen/normalTextSize" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:weightSum="3"
        android:background="@drawable/subbackground"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/customerName"
                android:textSize="@dimen/normalTextSize" />

            <EditText
                android:id="@+id/customerNameInput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/customerNameHint"
                android:inputType="textPersonName"
                android:textSize="@dimen/normalTextSize" />

            <TextView
                android:layout_column="0"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView12"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/discount"
                android:textSize="@dimen/normalTextSize" />

            <EditText
                android:id="@+id/soldInputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/soldTextHint"
                android:inputType="numberDecimal"
                android:textSize="@dimen/normalTextSize" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/currencyUnitText"
                android:textSize="@dimen/normalTextSize" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearbottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textColor="#000000"
            android:text="@string/InvoiceValue"
            android:textSize="@dimen/normalTextSize"
            android:layout_marginStart="50dp" />

        <TextView
            android:id="@+id/totalSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/invoiceValueExample"
            android:textSize="@dimen/normalTextSize"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:text="@string/currencyUnitText"
            android:textSize="@dimen/normalTextSize"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearbottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/noteTextLabelText"
            android:textSize="@dimen/normalTextSize" />

        <EditText
            android:id="@+id/invoiceNotesEditText"
            android:layout_width="288dp"
            android:layout_height="127dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="left"
            android:inputType="textPersonName"
            android:text="@string/noteExample"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>