<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:background="@drawable/subbackground"
    tools:context=".InvoiceReviewScreen">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903">

        <Button
            android:id="@+id/paymentButton"
            style="@style/myButton"
            android:layout_marginTop="12dp"
            android:text="@string/payment"
            android:textSize="@dimen/normalTextSize" />

        <Button
            android:id="@+id/addProductbutton"
            style="@style/myButton"
            android:layout_marginTop="12dp"
            android:text="@string/addNewProduct"
            android:textSize="@dimen/normalTextSize" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/myButton"
            android:layout_marginTop="12dp"
            android:text="@string/cancelInvoiceText"
            android:textSize="@dimen/normalTextSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InvoiceValue"
            android:textSize="@dimen/normalTextSize"
            android:textColor="#000000"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/invoiceValueExample"
            android:textSize="@dimen/normalTextSize"
            android:textColor="#000000"
            android:layout_marginStart="50dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currencyUnitText"
            android:textSize="@dimen/normalTextSize"
            android:textColor="#000000"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="199dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableLayout
                        android:id="@+id/invoiceTable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="3" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>